syntax = "proto3";


message PeticionDescargarAudio{
    string nombre = 1;
}

message RespuestaChunkAudio{
    bytes datos = 1;
}

service ServicioAudio{
    rpc descargarAudio(PeticionDescargarAudio) returns (stream RespuestaChunkAudio);
}